<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="3"
    tools:context="com.example.sander.sander_pset1.MainActivity"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/img_ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/img_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/img_arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/img_eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/img_eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/img_glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/img_hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/img_mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/img_mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/img_nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/img_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/shoes" />
    </FrameLayout>

    <GridLayout
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="5">

        <CheckBox
            android:id="@+id/ears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ears"
            android:onClick="toggleShow"/>

        <CheckBox
            android:id="@+id/eyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eyes" />

        <CheckBox
            android:id="@+id/arms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arms" />

        <CheckBox
            android:id="@+id/eyebrows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eyebrows" />

        <CheckBox
            android:id="@+id/glasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glasses" />

        <CheckBox
            android:id="@+id/hat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hat" />

        <CheckBox
            android:id="@+id/nose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nose" />

        <CheckBox
            android:id="@+id/mustache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mustache" />

        <CheckBox
            android:id="@+id/checkBox26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoes" />

        <CheckBox
            android:id="@+id/mouth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mouth" />
    </GridLayout>
</LinearLayout>
